<resources>
    <string name="app_name">Mozgovanje</string>
    <string name="home">Home</string>
    <string name="all_questions">All questions</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="user">My profile</string>
    <string name="tvWelcome">Zdravo, izaberite mod</string>
    <string name="tvTestMod">Test (40 pitanja)</string>
    <string name="tvGeekMod">Geek (100 pitanja)</string>
    <string name="tvZenMod">Zen (20 pitanja)</string>
    <string name="hint_sadrzaj_pitanja">Unesite sadržaj pitanja</string>
    <string name="new_question">New question</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="inkrement">Inkrement:</string>
    <string name="ukupno_poena">Ukupno poena:</string>
    <string name="next">Next</string>
</resources>