<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activity_main_nav_home"
        android:icon="@drawable/ic_home_navbar"
        android:title="@string/home" />

<!--    <item
        android:id="@+id/activity_main_nav_all_questions"
        android:icon="@drawable/ic_all_questions_navbar"
        android:title="@string/all_questions" />-->

    <item
        android:id="@+id/activity_main_nav_new_question"
        android:icon="@drawable/ic_add_navbar"
        android:title="@string/new_question" />

    <item
        android:id="@+id/activity_main_nav_scoreboard"
        android:icon="@drawable/ic_scoreboard_navbar"
        android:title="@string/scoreboard" />

    <!--<item
        android:id="@+id/activity_main_nav_user"
        android:icon="@drawable/ic_user_navbar"
        android:title="@string/user" />-->

</menu>