<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickHandler"
            type="project.mozgovanje.activity.main.fragments.home.FragmentHome.ClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activity_main_tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tvWelcome"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/activity_main_btnZenMode"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:foreground="@mipmap/ic_yinyang_foreground"
            android:onClick="@{clickHandler::onBtnZenMode}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_tvWelcome" />

        <ImageButton
            android:id="@+id/activity_main_btnTestMode"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:foreground="@mipmap/ic_exam_foreground"
            android:onClick="@{clickHandler::onBtnTestMode}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_btnZenMode" />

        <ImageButton
            android:id="@+id/activity_main_btnGeekMode"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:foreground="@mipmap/ic_geek_round"
            android:onClick="@{clickHandler::onBtnGeekMode}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_btnTestMode" />

        <TextView
            android:id="@+id/activity_main_tvZenMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvZenMod"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/activity_main_btnZenMode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toEndOf="@+id/activity_main_btnZenMode"
            app:layout_constraintTop_toTopOf="@+id/activity_main_btnZenMode" />

        <TextView
            android:id="@+id/activity_main_tvTestMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTestMod"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/activity_main_btnTestMode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/activity_main_btnTestMode"
            app:layout_constraintTop_toTopOf="@+id/activity_main_btnTestMode" />

        <TextView
            android:id="@+id/activity_main_tvGeekMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGeekMod"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/activity_main_btnGeekMode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/activity_main_btnGeekMode"
            app:layout_constraintTop_toTopOf="@+id/activity_main_btnGeekMode" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>