<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="project.mozgovanje.util.string.StringUtil" />

        <variable
            name="clickHandler"
            type="project.mozgovanje.activity.quiz.QuizActivity.ClickHandler" />

        <variable
            name="quizMaster"
            type="project.mozgovanje.activity.quiz.quizmaster.QuizMaster" />

        <variable
            name="quizTimer"
            type="project.mozgovanje.activity.quiz.quizmaster.QuizTimer" />

        <variable
            name="scoreManager"
            type="project.mozgovanje.activity.quiz.quizmaster.ScoreManager" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.quiz.QuizActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/googleBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/activitiy_quiz_tvQuestionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@{StringUtil.getCurrentQuizState(quizMaster.currentQuestionIndex, quizMaster.lastQuestionIndex)}"
                android:textColor="@color/colorTertiary1"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/activitiy_quiz_tvQuestion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activitiy_quiz_tvQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:gravity="center"
                android:maxLines="5"
                android:text="@{quizMaster.currentQuestion.questionText}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/activity_quiz_tvCountdown"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text_rounded_blue_border"
            android:backgroundTint="@color/colorTertiary1"
            android:gravity="center"
            android:textColor="@{quizTimer.warningTime? @android:color/holo_red_light : @android:color/black}"
            android:text="@={`` + quizTimer.timeLeft}"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_quiz_constrain_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_quiz_tvCountdown">


            <Button
                android:id="@+id/activity_quiz_tvAnswer1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/edit_text_rounded_blue_border"
                android:elevation="3dp"
                android:onClick="@{clickHandler::onBtnAnswer1}"
                android:text="@{quizMaster.currentQuestion.answer1}"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/activity_quiz_tvAnswer2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/activity_quiz_tvAnswer2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/edit_text_rounded_blue_border"
                android:elevation="3dp"
                android:onClick="@{clickHandler::onBtnAnswer2}"
                android:text="@{quizMaster.currentQuestion.answer2}"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/activity_quiz_tvAnswer3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_quiz_tvAnswer1" />

            <Button
                android:id="@+id/activity_quiz_tvAnswer3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/edit_text_rounded_blue_border"
                android:elevation="3dp"
                android:onClick="@{clickHandler::onBtnAnswer3}"
                android:text="@{quizMaster.currentQuestion.answer3}"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/activity_quiz_tvAnswer4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_quiz_tvAnswer2" />

            <Button
                android:id="@+id/activity_quiz_tvAnswer4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/edit_text_rounded_blue_border"
                android:elevation="3dp"
                android:onClick="@{clickHandler::onBtnAnswer4}"
                android:text="@{quizMaster.currentQuestion.answer4}"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/activity_quiz_btnNextQuestion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_quiz_tvAnswer3" />

            <ImageButton
                android:id="@+id/activity_quiz_btnNextQuestion"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/next"
                android:foreground="@drawable/ic_arrow_right"
                android:onClick="@{clickHandler::onBtnNextQuestion}"
                android:text="@string/next"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_quiz_tvAnswer4" />

            <TextView
                android:id="@+id/activity_quiz_placeholderInkrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/inkrement"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_quiz_tvAnswer4" />

            <TextView
                android:id="@+id/activity_quiz_tvInkrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@={`` + scoreManager.increment}"
                app:layout_constraintBottom_toBottomOf="@id/activity_quiz_placeholderInkrement"
                app:layout_constraintEnd_toEndOf="@+id/activity_quiz_tvUkupnoPoena"
                app:layout_constraintLeft_toRightOf="@id/activity_quiz_placeholderInkrement"
                app:layout_constraintTop_toTopOf="@id/activity_quiz_placeholderInkrement"
                tools:text="2" />

            <TextView
                android:id="@+id/activity_quiz_placeholderUkupnoPoena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/ukupno_poena"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_quiz_placeholderInkrement" />

            <TextView
                android:id="@+id/activity_quiz_tvUkupnoPoena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@={`` + scoreManager.totalPoints}"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/activity_quiz_placeholderUkupnoPoena"
                app:layout_constraintLeft_toRightOf="@id/activity_quiz_placeholderUkupnoPoena"
                app:layout_constraintTop_toTopOf="@id/activity_quiz_placeholderUkupnoPoena"
                tools:text="24" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>